# ad_profit_task

./: README.md  docker-compose.yml  pyproject.toml
balance/balance/: settings.py  urls.py
balance/revenue/: models.py  serializers.py  tests.py  urls.py  views.py
balance/revenue/migrations/: 0001_initial.py  0002_alter_revenuestatistic_spend.py
balance/spend/: models.py  serializers.py  tests.py  urls.py  views.py
balance/spend/migrations/: 0001_initial.py
